# mtsp_planning_task

./: LICENSE  README.md  install_dependencies.sh
.ci/: build.sh  install.sh
.github/workflows/: melodic.yml  noetic.yml
mtsp_msgs/: CMakeLists.txt  package.xml
mtsp_msgs/msg/: TspPoint.msg  TspProblem.msg
mtsp_msgs/src/: main.cpp
mtsp_planner/: CMakeLists.txt  package.xml
mtsp_planner/config/: simulation.yaml
mtsp_planner/launch/: planner.launch
mtsp_planner/scripts/: planner.py
mtsp_planner/scripts/solvers/: tsp_solvers.py  tsp_trajectory.py
mtsp_planner/scripts/solvers/lkh/: .gitignore  install.sh  invoke_LKH.py
mtsp_problem_loader/: CMakeLists.txt  package.xml  setup.py
mtsp_problem_loader/config/: simulation.yaml
mtsp_problem_loader/launch/: problem_loader.launch
mtsp_problem_loader/problems/: random_problem.tsp
mtsp_problem_loader/scripts/: loader.py
mtsp_problem_loader/scripts/mtsp_problem_loader/: generate_problem.py  tsp_problem.py
mtsp_state_machine/: CMakeLists.txt  package.xml  plugins.xml
mtsp_state_machine/config/: automatic_start.yaml  simulation.yaml  world.yaml
mtsp_state_machine/config/simulation/: world.yaml
mtsp_state_machine/config/simulation/mpc_tracker/: mpc_tracker.yaml
mtsp_state_machine/config/simulation/uav_manager/: control_manager.yaml  controllers.yaml  trackers.yaml  uav_manager.yaml
mtsp_state_machine/config/simulation/uav_manager/constraint_manager/: constraint_manager.yaml  constraints.yaml
mtsp_state_machine/config/simulation/uav_manager/gain_manager/: gain_manager.yaml  gains.yaml
mtsp_state_machine/launch/: rviz.launch  rviz_3_4.launch  simulation.launch  uav.launch  uav_automatic_start.launch  uav_manager_simulation.launch
mtsp_state_machine/rviz/: rviz.rviz  rviz_3_4.rviz
mtsp_state_machine/src/: mtsp_state_machine.cpp
mtsp_state_machine/tmux/rviz/: session.yml
mtsp_state_machine/tmux/test/: pos.yaml  pos1.txt  pos1.yaml  pos2.txt  pos2.yaml  session.yml
mtsp_state_machine/tmux/test/custom_configs/: world.yaml
mtsp_state_machine/tmux/uav/: f450_master.sh  f550_master.sh  world.yaml  world_kn.yaml
mtsp_state_machine/tmux/uav/custom_configs/: automatic_start.yaml  communication_config.yaml  uav_manager.yaml
mtsp_state_machine/tmux/uav/master/: tmux.sh
mtsp_state_machine/tmux/uav/master/custom_configs/: communication_config.yaml
mtsp_state_machine/tmux/uav/slave/: custom_configs  tmux.sh
mtsp_state_machine/tmux/uav/slave/custom_configs/: constraint_manager.yaml
