<?xml version="1.0"?>
<package format="2">

  <name>mtsp_state_machine</name>
  <version>0.0.1</version>
  <description>MTSP state machine</description>

  <author email="robert.penicka@fel.cvut.cz">Robert Penicka</author>
  <maintainer email="tomas.baca@fel.cvut.cz">Tomas Baca</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>nodelet</depend>
  <depend>roscpp</depend>
  <depend>message_runtime</depend>
  <depend>mrs_lib</depend>
  <depend>mrs_msgs</depend>
  <depend>mtsp_msgs</depend>
  <depend>mavros_msgs</depend>

  <export>
    <nodelet plugin="${prefix}/plugins.xml" />
  </export>

</package>
